--- a/kara-frontend/src/app/login-page/login-page.component.html
+++ b/kara-frontend/src/app/login-page/login-page.component.html
@@ -1,11 +1,12 @@
-<div class="container-fluid h-100 bg-light" style="position:relative">
+<div class="container-fluid h-100 bg-light d-flex flex-column align-items-center">
   <div class="display-4 p-4 mb-12px text-center">Kara</div>
   <div class="login-form-container">
     <form [formGroup]="loginFormGroup" (submit)="loginUser()">
       <h4 class="form-group font-weight-light">Login</h4>
       <div class="form-group">
         <label for="emailField" class="text-muted">Email address</label>
-        <input type="email" id="emailField" class="form-control" formControlName="email">
+        <input type="email" id="emailField" class="form-control" formControlName="email" aria-describedby="emailHelp">
+        <small id="emailHelp" class="text-muted form-text">Usually, this is the email you used to register. </small>
       </div>
       <div class="form-group">
         <label for="passwordField" class="text-muted">Password</label>
@@ -14,4 +15,5 @@
       <button type="submit" class="btn btn-primary">Sign in</button>
     </form>
   </div>
+  <div class="text-muted text-center mb-4"><a href="" class="text-primary">Register</a> for a new account</div>
 </div>
