--- a/kara-frontend/src/app/message-details/message-details.component.html
+++ b/kara-frontend/src/app/message-details/message-details.component.html
@@ -8,9 +8,9 @@
     </div>
     <div class="messages-root">
       <ul class="messages-list">
-        <li *ngFor="let message of activeChatHub.messages; index as i" >
-          <div>
-            <strong>{{message.content}}</strong>
+        <li class="message-list-item" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.isSent ? 'flex-start' : 'flex-end'}">
+          <div class="message-list-item-content">
+            <span>{{message.content}}</span>
           </div>
         </li>
       </ul>
