--- a/kara-frontend/src/app/message-list/message-list.component.css
+++ b/kara-frontend/src/app/message-list/message-list.component.css
@@ -82,12 +82,14 @@
 .header{
     display: flex;
     flex-direction: row;
-    padding: 4px;
-    justify-content: flex-start;
+    flex: none;
+    height: 48px;
+    padding: 0 8px;
     align-items: center;
+    justify-content: flex-start;
+    background: white;
     color: black;
     box-shadow: 0px 2px 10px black;
-    background-color: white;
 }
 
 .header-content{
