--- a/kara-frontend/src/app/home-page/home-page.component.html
+++ b/kara-frontend/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row h-100" style="overflow: auto">
-    <app-message-list [activeUser]="user" (messageChanged)="switchMessage($event)" class="col-md-4 h-100 px-0"></app-message-list>
-    <app-message-details [activeUser]="user" [activeChatHub]="activeChatUser" class="col-md-8 h-100 px-0"></app-message-details>
+    <app-message-list [socket]="socket" [activeUser]="activeUser" (chatHubChanged)="chatHubChanged($event)" class="col-md-4 h-100 px-0"></app-message-list>
+    <app-message-details [socket]="socket" [activeUser]="activeUser" [activeChatHub]="activeChatHub" class="col-md-8 h-100 px-0"></app-message-details>
   </div>
 </div>
