--- a/kara-frontend/src/app/message-details/message-details.component.css
+++ b/kara-frontend/src/app/message-details/message-details.component.css
@@ -1,4 +1,6 @@
-.no-padding{
+.container-fluid{
+    background: #ffffff;
+    height: 100%;
     padding: 0;
 }
 
@@ -16,9 +18,8 @@
     padding: 0 16px;
     align-items: center;
     justify-content: flex-end;
-    background: white;
+    background: whitesmoke;
     color: black;
-    box-shadow: 0px 2px 10px black;
 }
 
 .header-content{
@@ -34,6 +35,7 @@
     justify-content: stretch;
     align-self: stretch;
     justify-self: stretch;
+    background: whitesmoke;
 }
 
 form{
