--- a/kara-frontend/src/app/message-details/message-details.component.html
+++ b/kara-frontend/src/app/message-details/message-details.component.html
@@ -1,11 +1,11 @@
-<div class="container-fluid no-padding h-100">
+<div class="container-fluid">
   <div class="content-root" *ngIf="activeChatHub">
-    <div class="header-root">
+    <header class="header-root">
       <div class="header-content">
         <div class="avatar"></div>
         <strong>{{activeChatHub.firstName}} {{activeChatHub.lastName}}</strong>
       </div>
-    </div>
+    </header>
     <div class="messages-root">
       <ul class="messages-list">
         <li class="message-list-item" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.isSent ? 'flex-start' : 'flex-end'}">
