--- a/kara-frontend/src/app/message-list/message-list.component.html
+++ b/kara-frontend/src/app/message-list/message-list.component.html
@@ -7,16 +7,16 @@
   </header>
   <div class="chats-container">
     <ul class="list-messages">
-      <li class="list-item-container" *ngFor="let user of activeUser.hubList; index as i" (click)="onHubChanged($event, user)">
+      <li class="list-item-container" *ngFor="let hub of activeUser.hubList; index as i" (click)="onChatHubChanged($event, hub)">
         <div class="list-item">
           <div class="list-item-avatar"></div>
           <div class="list-item-info">
             <div class="list-item-info-header">
-              <strong class="message-user-name">{{user.firstName}} {{user.lastName}}</strong>
+              <strong class="message-user-name">{{hub.name}}</strong>
               <span class="message-unread-count badge badge-pill">10</span>
             </div>
             <div class="list-item-info-message">
-              <small class="message-text">Foo bar foo bar</small>
+              <small class="message-text">{{hub.messages[0]}}</small>
               <small class="message-date">7:43 PM</small>
             </div>
           </div>
