--- a/kara-frontend/src/app/message-list/message-list.component.html
+++ b/kara-frontend/src/app/message-list/message-list.component.html
@@ -16,8 +16,9 @@
               <span class="message-badge" *ngIf="hub.unreadMessageCount !== 0">{{hub.unreadMessageCount}}</span>
             </div>
             <div class="list-item-info-message">
-              <small class="message-text" [ngStyle]="hub.messages[hub.messages.length - 1]?.styles?.textStyle">{{hub.messages[hub.messages.length - 1]?.content}}</small>
-              <small class="message-date">{{hub.messages[hub.messages.length - 1]?.dateRecieved | date: 'shortTime'}}</small>
+              <small *ngIf="!hub.isTypingMessage" class="message-text">{{hub.messages[hub.messages.length - 1]?.content}}</small>
+              <small *ngIf="!hub.isTypingMessage" class="message-date">{{hub.messages[hub.messages.length - 1]?.dateRecieved | date: 'shortTime'}}</small>
+              <small *ngIf="hub.isTypingMessage" class="message-text" style="color: green">typing...</small>
             </div>
           </div>
         </div>
