--- a/kara-frontend/src/app/chat-hub-list-item-details/chat-hub-list-item-details.component.css
+++ b/kara-frontend/src/app/chat-hub-list-item-details/chat-hub-list-item-details.component.css
@@ -28,34 +28,6 @@
     flex: none;
 }
 
-.action-root{
-    display: flex;
-    flex-direction: row;
-    flex: none;
-    justify-content: stretch;
-    align-self: stretch;
-    justify-self: stretch;
-    background: whitesmoke;
-}
-
-form{
-    width: 100%;
-}
-
-.form-group{
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding: 8px;
-    margin-bottom: 0;
-}
-
-.text-field{
-    border-radius: 100px;
-    margin-right: 8px;
-}
-
 .avatar{
     width: 32px;
     height: 32px;
@@ -85,4 +57,11 @@ form{
     height: 100%;
     align-items: center;
     justify-content: center;
+}
+
+.chat-bar{
+    display: block;
+    flex: none;
+    align-self: stretch;
+    justify-self: stretch;
 }
