component sepration and syntactical improvements

--- a/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.html
@@ -1,3 +1,10 @@
-<p>
-  chat-hub-list-item-details-message-list-item works!
-</p>
+<li class="message-list-item">
+  <div class="message-root">
+    <div class="message-main-body">
+      <span>{{ message.content }}</span>
+    </div>
+    <div class="message-extra-info">
+      <small class="text-muted">{{ message.dateRecieved | date: "shortTime"}}</small>
+    </div>
+  </div>
+</li>
