--- a/kara-frontend/src/app/chat-hub-list-item-details-header-bar/chat-hub-list-item-details-header-bar.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details-header-bar/chat-hub-list-item-details-header-bar.component.html
@@ -1,3 +1,6 @@
-<p>
-  chat-hub-list-item-details-header-bar works!
-</p>
+<div class="container-fluid">
+  <div class="hub-info">
+      <div class="avatar"></div>
+      <strong>{{activeChatHub.name}}</strong>
+  </div>
+</div>
