--- a/kara-frontend/src/app/chat-hub-list-item-details-message-list/chat-hub-list-item-details-message-list.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details-message-list/chat-hub-list-item-details-message-list.component.html
@@ -1,3 +1,5 @@
-<p>
-  chat-hub-list-item-details-message-list works!
-</p>
+<div class="container-fluid">
+  <ul class="messages-list">
+    <app-chat-hub-list-item-details-message-list-item [message]="message" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.fromUserId === activeUser.id ? 'flex-start' : 'flex-end'}"></app-chat-hub-list-item-details-message-list-item>
+  </ul>
+</div>
