--- a/kara-frontend/src/app/chat-hub-list-item-details/chat-hub-list-item-details.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details/chat-hub-list-item-details.component.html
@@ -1,16 +1,7 @@
 <div class="container-fluid">
   <div class="content-root" *ngIf="activeChatHub">
-    <header class="header-root">
-      <div class="header-content">
-        <div class="avatar"></div>
-        <strong>{{activeChatHub.name}}</strong>
-      </div>
-    </header>
-    <div class="messages-root">
-      <ul class="messages-list">
-        <app-message-item [message]="message" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.fromUserId === activeUser.id ? 'flex-start' : 'flex-end'}"></app-message-item>
-      </ul>
-    </div>
+    <app-chat-hub-list-item-details-header-bar [activeChatHub]="activeChatHub" class="header"></app-chat-hub-list-item-details-header-bar>
+    <app-chat-hub-list-item-details-message-list [socket]="socket" [activeUser]="activeUser" [activeChatHub]="activeChatHub"></app-chat-hub-list-item-details-message-list>
     <app-chat-hub-list-item-details-interaction-bar [socket]="socket" [activeUser]="activeUser" [activeChatHub]="activeChatHub" class="chat-bar"></app-chat-hub-list-item-details-interaction-bar>
   </div>
   <div class="no-content-root"  *ngIf="!activeChatHub">
