component sepration and syntactical improvements

--- a/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.css
+++ b/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.css
@@ -16,8 +16,29 @@
 
 .message-extra-info{
     display: flex;
+    flex-direction: row;
     margin-top: 4px;
     font-size: 70%;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: stretch;
 }
 
+.msg-sck{
+    flex: none;
+}
+
+.text-muted{
+    flex: 1;
+    align-self: flex-end;
+    margin-left: 1rem;
+}
+
+svg{
+    width: 16px !important;
+    height: 16px !important;
+}
+
+svg path{
+    stroke: hotpink;
+    fill: hotpink;
+}
