--- a/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details-message-list-item/chat-hub-list-item-details-message-list-item.component.html
@@ -4,6 +4,10 @@
       <span>{{ message.content }}</span>
     </div>
     <div class="message-extra-info">
+      <span class="msg-ack" *ngIf="message.fromUserId === activeUser.id && !message.dateRecieved"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path d="M9 16.2L4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z" /></svg></span>
+      <span class="msg-ack" *ngIf="message.fromUserId === activeUser.id && message.dateRecieved"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
+          <path d="M18 7l-1.41-1.41-6.34 6.34 1.41 1.41L18 7zm4.24-1.41L11.66 16.17 7.48 12l-1.41 1.41L11.66 19l12-12-1.42-1.41zM.41 13.41L6 19l1.41-1.41L1.83 12 .41 13.41z" /></svg></span>
       <small class="text-muted">{{ message.dateRecieved | date: "shortTime"}}</small>
     </div>
   </div>
