--- a/kara-frontend/src/app/chat-hub-list-item-details-message-list/chat-hub-list-item-details-message-list.component.html
+++ b/kara-frontend/src/app/chat-hub-list-item-details-message-list/chat-hub-list-item-details-message-list.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
   <ul class="messages-list">
-    <app-chat-hub-list-item-details-message-list-item [socket]="socket" [activeChatHub]="activeChatHub" [message]="message" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.fromUserId === activeUser.id ? 'flex-start' : 'flex-end'}"></app-chat-hub-list-item-details-message-list-item>
+    <app-chat-hub-list-item-details-message-list-item [socket]="socket" [activeUser]="activeUser" [activeChatHub]="activeChatHub" [message]="message" *ngFor="let message of activeChatHub.messages; index as i" [ngStyle]="{'align-self': message.fromUserId === activeUser.id ? 'flex-start' : 'flex-end'}"></app-chat-hub-list-item-details-message-list-item>
   </ul>
 </div>
